add file system handling

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(fileutils)
+add_subdirectory(platform)
+add_subdirectory(common)
 add_subdirectory(submodules)
 
 #set(PARENTFOLDER "src")
